Sat Jul 06 19:28:09 2002  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Don't send greeter pids that are 0, fixes #84717 and
	  some others.  Whoops!

	* daemon/xdmcp.c: Fix #85681 by putting the gdm_xdmcpfd outside of
	  the #ifdef so non-xdmcp compiles should work again

	* configure.in: Hopefully fix #85785 by adding -lcrypt before other
	  libs.  Also apply patch from dalgoda@ix.netcom.com (Mike Castle)
	  to fix #86607 by adding proper includes for X before testing 
	  for xdmcp libs

2002-06-24  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

Fri Jun 07 21:21:33 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.0

2002-06-07  jacob berkman  <jacob@ximian.com>

	* gui/greeter/themes/happygnome/Makefile.am (EXTRA_DIST):
	s/circles/happygnome/

Thu Jun 06 15:32:01 2002  George Lebl <jirka@5z.com>

	* NEWS, configure.in: preparation for 2.4.0.0

Thu Jun 06 11:47:26 2002  George Lebl <jirka@5z.com>

	* configure.in, po/POTFILES.in, gui/greeter/themes/Makefile.am,
	  gui/greeter/themes/happygnome/*:  Add the happygnome theme,
	  so finally the theme browser makes sense since you can now
	  switch between two themes :)  If we're in freeze we can at least
	  add themes ...

Tue Jun 04 21:45:19 2002  George Lebl <jirka@5z.com>

	* Release 2.3.90.6

	* configure.in: raise version

	* daemon/gdm.c: properly update the first login bool so
	  that not all logins after a slave dies are first logins.

	* daemon/slave.c: SECURITY FIX! after the automatic login,
	  return from the gdm_slave_run so that the display can be
	  reinitted.  Else clients may be left around.  Fixes #84055

Mon Jun 03 11:43:25 2002  George Lebl <jirka@5z.com>

	* Release 2.3.90.5

Sun Jun 02 12:51:20 2002  George Lebl <jirka@5z.com>

	* config/locale.alias: rewrite.  Use the languages that we know for
	  starters, don't put any duplicates.  Don't put any encodings.
	  put a note on the top of file about how broken this is.  However