@@ -1,3 +1,7 @@
+Sun Jul 07 06:26:51 2002  George Lebl <jirka@5z.com>
+
+	* gui/gdmsetup.c: some sanity checking before doing a kill
+
 Sat Jul 06 19:28:09 2002  George Lebl <jirka@5z.com>
 
 	* daemon/gdm.c: Don't send greeter pids that are 0, fixes #84717 and
